# Synthesis-PayWithLocus

./: .env.example  README.md  agent.json  agent_log.json  pyproject.toml
agents/: locus_payments.py
docs/: architecture.mmd  audit.md  concepts.md  credentials.md  demo_video_script.md  live_readiness.md  security.md
script/: Deploy.s.sol
scripts/: plan_live_demo.py  render_submission.py  run_agent.py
src/: LocusSpendController.sol
submissions/: synthesis.md
test/: LocusSpendController.t.sol
tests/: test_project_context.py
